# variational-autoencoder

./: .gitignore  .pre-commit-config.yaml  README.md  configure.sh  pyproject.toml  requirements.txt  train.py
datamodules/: __init__.py  cifar10.py  datamodules.py  images.py  mnist.py
models/: __init__.py
src/: explore_model.py  train.py
src/datamodules/: __init__.py  images.py  noise.py
src/models/: __init__.py  auto_encoder.py  base.py  classifier.py  conv_vae.py  mlp.py  mnist_classifier.py  modules.py  resnet.py  resnet_vae.py
src/models/base/: __init__.py  optimizers.py  schedulers.py
