[tool.poetry]
name = "vae"
version = "0.1.0"
description = ""
authors = ["Tsvika S <tsvikas@gmail.com>"]
#readme = "README.md"
#packages = [{ include = "models", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11,!=3.11.0"
torch = {version = "^2.0.0", source = "pytorch"}
torchvision = {version = "^0.15.1", source = "pytorch"}
pytorch-lightning = "^2.0.2"
wandb = "^0.15.2"
rich = "^13.3.5"
einops = "^0.6.1"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.0"
matplotlib = "^3.7.1"
ipywidgets = "^8.0.6"
jupytext = "^1.14.5"
jupyter-collaboration = "^1.0.0a8"
python-lsp-server = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
ruff = "^0.0.264"
scalene = "^1.5.21.2"

[[tool.poetry.source]]
name = "pytorch"
# to use with cuda 11.8+, replace this with https://download.pytorch.org/whl/cu118
url = "https://pypi.org/"
priority = "explicit"

[tool.ruff]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "COM812",
    "ARG002",
    "PLR",
    "RET504",
    "S101",
    "E501",
    "ERA001",
    "EM101",
    "EM102",
    "C408",
    "TRY003",
    "FBT002",
]
src = ["src"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/train.py" = ["INP001", "T201"]
"src/explore_model.py" = [
    "INP001",
    "E703",
    "S108",
    "T201",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
